--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -87,3 +87,13 @@
     border-bottom-left-radius: 2em !important;
   }
 }
+.bg-gradient-semi-circle {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  opacity: 19%;
+  filter: blur(40px);
+  transform: translateY(-50%);
+}
+
